# mezon-sdk-python

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  README.md  index.html  pyproject.toml  sitemap.xml
.claude/: coding_conventions.md
.cursor/rules/: comment-rules.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/builders/: index.html
api-reference/channel/: index.html
api-reference/clan/: index.html
api-reference/client/: index.html
api-reference/events/: index.html
api-reference/managers/: index.html
api-reference/message/: index.html
api-reference/models/: index.html
api-reference/user/: index.html
changelog/: index.html
contributing/: index.html
docs/: CNAME  mkdocs.yml
docs/docs/: changelog.md  contributing.md  index.md
examples/: fastapi_example.py
examples/advanced/: index.html
examples/basic-bot/: index.html
examples/fastapi/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
git-hooks/: pre-commit
guide/caching/: index.html
guide/channels/: index.html
guide/clans/: index.html
mezon/: __init__.py  client.py  models.py  session.py
search/: search_index.json
tests/: __init__.py  base.py  helpers.py  test_binary_api.py  test_buzz.py  test_clans.py  test_event_models.py  test_friends.py  test_health.py  test_interactive.py  test_mentions.py  test_messages.py  test_quick_menu.py  test_reconnect.py  test_runner.py  test_session.py  test_sse_models.py  test_streaming.py  test_tokens.py  test_users.py
(+87 files in other folders)
